--- a/src/components/header-mobile.css
+++ b/src/components/header-mobile.css
@@ -15,6 +15,13 @@
     font-weight: bold;
 }
 
+.mobile {
+    position: absolute;
+    z-index: 999;
+    color: white;
+    width: 100%;
+}
+
 .close-style {
     padding-right: 26px;
 }
