--- a/src/pages/chirurgie-obesite-tunisie.css
+++ b/src/pages/chirurgie-obesite-tunisie.css
@@ -3,13 +3,32 @@
     color: #fff;
 }
 
-.service-title{
+.service-title {
     font-size: 50px;
     line-height: 40px;
     font-family: Bree Serif;
     font-weight: bold;
 }
 
-.service-description{
+.service-description {
     font-size: 20px;
+}
+
+
+.intern-page-style {
+    margin-top: 15%;
+}
+
+
+.card-body-intervention {
+    background-color: #005b88;
+}
+
+
+.card-body-title {
+    color: #fff !important;
+    font-size: 28px !important;
+    font-family: Bree Serif !important;
+    font-weight: bold;
+
 }
