--- a/src/components/header-dekstop.css
+++ b/src/components/header-dekstop.css
@@ -121,9 +121,9 @@ hr {
     border: 1px solid rgb(134, 126, 126);
 }
 
-.chir-corp{
-    top: -200% !important;
-    width: 800px !important;
+.chir-corp {
+    top: 0 !important;
+    width: max-content !important;
 }
 
 .header {
